--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <link rel="stylesheet" href="/assets/css/home.css">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐔</text></svg>">
 </head>
-<body>
+<body class="home-layout">
 <div class="page-container">
     <main class="content-wrapper">
         <h1 class="site-title">The Holy Chicken</h1>
         <p class="site-description">
-            This website is for stuff that's connected to my online identity, that way I can at least pretend my personal information isn't freely available online. My <a href="projects/projects.html">projects</a>
-            page contains information about a lot of projects I've worked on, like my Minecraft mod. The <a href="blog/blog.html">blog</a> page contains blog posts I've written, like my discussion of LaTeX
+            This website is for stuff that's connected to my online identity, that way I can at least pretend my personal information isn't freely available online. My <a href="projects/index.html">projects</a>
+            page contains information about a lot of projects I've worked on, like my Minecraft mod. The <a href="blog/index.html">blog</a> page contains blog posts I've written, like my discussion of LaTeX
             workflow optimization.
         </p>
         <nav class="navigation-links">
-            <a href="/projects/projects.html" class="nav-link">Projects</a>
-            <a href="/blog/blog.html" class="nav-link">Blog</a>
+            <a href="/projects/index.html" class="nav-link">Projects</a>
+            <a href="/blog/index.html" class="nav-link">Blog</a>
         </nav>
     </main>
     <footer class="site-footer">
