--- a/projects/index.html
+++ b/projects/index.html
@@ -2,9 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>projects</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projects - TheHolyChickn</title>
+    <link rel="stylesheet" href="/assets/css/theme.css">
+    <link rel="stylesheet" href="/assets/css/blog.css">
+    <link rel="stylesheet" href="/assets/css/projects.css">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐔</text></svg>">
 </head>
 <body>
+<div class="site-wrapper">
+    <aside class="sidebar-nav">
+        <div class="sidebar-header">
+            <a href="/index.html" class="site-logo-link">TheHolyChickn</a>
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="/index.html" class="nav-item">Home</a></li>
+                <li><a href="/projects/index.html" class="nav-item active">Projects</a></li>
+                <li><a href="/blog/index.html" class="nav-item">Blog</a></li>
+            </ul>
+        </nav>
+        <footer class="sidebar-footer">
+            <p>&copy; The Holy Chicken<span id="year"></span></p>
+        </footer>
+    </aside>
 
+    <main class="blog-content-area">
+        <header class="blog-page-header">
+            <h1 class="blog-page-main-title">Projects</h1>
+        </header>
+        <div class="project-card-grid" id="projectCardContainer">
+            <p class="loading-message">Loading projects...</p>
+        </div>
+    </main>
+</div>
+
+<script src="/assets/js/year.js"></script>
+<script src="/assets/js/projects.js"></script>
 </body>
 </html>
