--- a/index.html
+++ b/index.html
@@ -5,26 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Holy Chicken</title>
     <link rel="stylesheet" href="/assets/css/theme.css">
-    <link rel="stylesheet" href="/assets/css/home.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐔</text></svg>">
+    <link rel="stylesheet" href="/assets/css/blog.css"> <link rel="stylesheet" href="/assets/css/home.css">   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐔</text></svg>">
 </head>
-<body class="home-layout">
-<div class="page-container">
-    <main class="content-wrapper">
-        <h1 class="site-title">The Holy Chicken</h1>
-        <p class="site-description">
-            This website is for stuff that's connected to my online identity, that way I can at least pretend my personal information isn't freely available online. My <a href="projects/index.html">projects</a>
-            page contains information about a lot of projects I've worked on, like my Minecraft mod. The <a href="blog/index.html">blog</a> page contains blog posts I've written, like my discussion of LaTeX
-            workflow optimization.
-        </p>
-        <nav class="navigation-links">
-            <a href="/projects/index.html" class="nav-link">Projects</a>
-            <a href="/blog/index.html" class="nav-link">Blog</a>
+<body>
+<div class="site-wrapper">
+    <aside class="sidebar-nav">
+        <div class="sidebar-header">
+            <a href="/index.html" class="site-logo-link">TheHolyChickn</a>
+        </div>
+        <nav class="main-navigation">
+            <ul>
+                <li><a href="/index.html" class="nav-item active">Home</a></li>
+                <li><a href="/projects/index.html" class="nav-item">Projects</a></li>
+                <li><a href="/blog/index.html" class="nav-item">Blog</a></li>
+            </ul>
         </nav>
+        <footer class="sidebar-footer">
+            <p>&copy; The Holy Chicken<span id="year"></span></p>
+        </footer>
+    </aside>
+
+    <main class="blog-content-area home-content-area">
+        <header class="home-header">
+            <h1 class="site-title">The Holy Chicken</h1>
+            <p class="site-description">
+                This website is for stuff that's connected to my online identity, that way I can at least pretend my personal information isn't freely available online. My <a href="projects/index.html">projects</a>
+                page contains information about a lot of projects I've worked on, like my Minecraft mod. The <a href="blog/index.html">blog</a> page contains blog posts I've written, like my discussion of LaTeX
+                workflow optimization.
+            </p>
+        </header>
+
+        <section class="featured-section">
+            <h2 class="featured-title">Featured Projects</h2>
+            <div class="featured-grid" id="featuredProjectsContainer">
+                <p class="loading-message">Loading projects...</p>
+            </div>
+            <div class="view-all-link">
+                <a href="/projects/index.html">View All Projects &rarr;</a>
+            </div>
+        </section>
+
+        <section class="featured-section">
+            <h2 class="featured-title">Latest Blog Posts</h2>
+            <div class="featured-grid" id="latestPostsContainer">
+                <p class="loading-message">Loading posts...</p>
+            </div>
+            <div class="view-all-link">
+                <a href="/blog/index.html">View All Blog Posts &rarr;</a>
+            </div>
+        </section>
     </main>
-    <footer class="site-footer">
-        <p>&copy; The Holy Chicken<span id="year"></span></p>
-    </footer>
 </div>
-<script src="/assets/js/year.js"></script></body>
+
+<script src="/assets/js/year.js"></script>
+<script src="/assets/js/home.js"></script> </body>
 </html>
