--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class="home-container">
     <nav class="home-nav">
         <a href="/index.html" class="nav-link active">Home</a>
+        <a href="/about/index.html" class="nav-link">About</a>
         <a href="/projects/index.html" class="nav-link">Projects</a>
         <a href="/blog/index.html" class="nav-link">Blog</a>
     </nav>
