functorial + good night (2)

--- a/about/index.html
+++ b/about/index.html
@@ -38,12 +38,12 @@
       <div class="article-content" id="mainArticleContent">
         <div class="about-container">
           <div class="about-text">
-            <p>I go by The Holy Chicken online, and I'm an undergrad student in physics and math, and an aspiring academic. I'm also an ex-top skyblock player, and could also be considered an ex-skyblock youtuber. I'm interested in quantum field theory and higher category theory (can you tell that
-            I know more math than physics right now?), and develop multiple projects, mainly to improve LaTeX workflow, make my desktop look cooler.</p>
+            <p>I go by The Holy Chicken online, and I'm my junior year of undergrad, studying physics and math. I'm an ex-top skyblock player, and could also be considered an ex-skyblock youtuber. I'm interested in higher category theory and homotopy theory, as well as their applications to physics, especially
+              formal QFT. I'm also developing multiple projects, mainly to improve LaTeX workflow, but also to make my desktop look cooler.</p>
 
             <h2 id="projects">Projects</h2>
             <p>I work on a number of projects, which can be found on my <a href="/projects/index.html">projects</a> page. When I purchased a new laptop for college, I opted to install Linux on it instead of daily driving Windows, because I hate Windows 11. Ricing my desktop gave me some basic
-            experience with the terminal, and made me realize that if a application or feature that I want doesn't already exist, I can probably just make it myself. Basically all of my projects start via this mentality, generally along with some inspiration from a preexisting project.</p>
+            experience with the terminal, and made me realize that if an application or feature that I want doesn't already exist, I can probably just make it myself. Basically all of my projects start via this mentality, generally along with some inspiration from a preexisting project.</p>
 
             <h2 id="skyblock">Skyblock</h2>
             <p>No one really cares about this, but I want to remember my accomplishments in this game, so I'll record them here. I focused mainly on dungeons, and peaked at #2 in cata xp. I held #1 tank xp for a fairly long time, before I started playing less and lost the spot. I was the 79th cata 50 (August 7th, 2021),
